# sysc_newbie

./: .gitignore  CMakeLists.txt  HOW_TO_BUILD_SYSC  README.md  gen_sysc.sh
src/: main.cc
